fix: issue 'java.base does not "opens java.lang" to unnamed module